# libreband

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: gb_db.c  gb_db.h  main.c  mib10_activity.c  mib10_app.h  mib10_bluez.c  mib10_crypto.c  mib10_ui.c  mib10_wire.c  xiaomi.pb-c.c  xiaomi.pb-c.h
